Update index.html 1

--- a/index.html
+++ b/index.html
@@ -1,14 +1,9 @@
-
-Here's a simple example of an index.html page:
-
-html
-Copy code
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
+    <title>Buuny The Brat</title>
     <style>
         body {
             font-family: Arial, sans-serif;
