--- a/index.html
+++ b/index.html
@@ -35,6 +35,17 @@
             padding: 20px;
             text-align: center;
         }
+        .square-box {
+            width: 150px;
+            height: 150px;
+            background-color: #fff;
+            border-radius: 15px;
+            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+            margin: 20px auto;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
         footer {
             background-color: #333;
             color: white;
@@ -59,6 +70,9 @@
     <main>
         <h2>Main Content</h2>
         <p>This is where the main content of your website will go.</p>
+        <div class="square-box">
+            <p>Box Content</p>
+        </div>
     </main>
     <footer>
         <p>&copy; 2024 My Website. All rights reserved.</p>
