--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
             padding: 10px 0;
             position: fixed;
             width: 100%;
+            height: 100%;
             bottom: 0;
         }
     </style>
