--- a/index.html
+++ b/index.html
@@ -36,16 +36,25 @@
             text-align: center;
         }
         .square-box {
-            width: 150px;
-            height: 150px;
+            width: 80%;
+            height: auto;
             background-color: #fff;
             border-radius: 15px;
-            box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-            margin: 20px auto;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+            box-shadow: 10px 10px 10px rgba(0, 0, 0, 1);
+            margin: 20px, opx, 20px auto;
+			float: right;
+			padding: 10px; /* Optional: Adds some padding inside the box */
+			display: flex;
+			flex-direction: column; /* Align items in a column */
+			justify-content: center; /* Center items vertically */
+			align-items: flex-start; /* Align items to the start of the container */
         }
+		.square-2 {
+			display: flex;
+			justify-content: center;
+			width: 100%;
+			text-align: center;
+		}
         footer {
             background-color: #333;
             color: white;
@@ -53,7 +62,6 @@
             padding: 10px 0;
             position: fixed;
             width: 100%;
-            height: 100%;
             bottom: 0;
         }
     </style>
@@ -72,7 +80,9 @@
         <h2>Main Content</h2>
         <p>This is where the main content of your website will go.</p>
         <div class="square-box">
-            <p>Box Content</p>
+            <p class= "square-2">Title of Blog</p>
+			<p>This will be where the first few lines of the blog post will be</p>
+			<p>date,time, etc of post</p>
         </div>
     </main>
     <footer>
