--- a/index.html
+++ b/index.html
@@ -81,8 +81,13 @@
         <p>This is where the main content of your website will go.</p>
         <div class="square-box">
             <p class= "square-2">Title of Blog</p>
-			<p>This will be where the first few lines of the blog post will be</p>
-			<p>date,time, etc of post</p>
+	    <p>This will be where the first few lines of the blog post will be</p>
+	    <p>date,time, etc of post</p>
+        </div>
+	<div class="square-box">
+            <p class= "square-2">Title of Blog</p>
+	    <p>This will be where the first few lines of the blog post will be</p>
+	    <p>date,time, etc of post</p>
         </div>
     </main>
     <footer>
