--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             background-color: #fff;
             border-radius: 15px;
             box-shadow: 10px 10px 10px rgba(0, 0, 0, 1);
-            margin: 20px, opx, 20px auto;
+            margin: 20px 0px 20px auto;
 			float: right;
 			padding: 10px; /* Optional: Adds some padding inside the box */
 			display: flex;
@@ -84,9 +84,6 @@
 	    <p>This will be where the first few lines of the blog post will be</p>
 	    <p>date,time, etc of post</p>
         </div>
-        </br>
-        </br>
-    	</br>
 	<div class="square-box">
             <p class= "square-2">Title of Blog</p>
 	    <p>This will be where the first few lines of the blog post will be</p>
