--- a/index.html
+++ b/index.html
@@ -49,6 +49,16 @@
 			justify-content: center; /* Center items vertically */
 			align-items: flex-start; /* Align items to the start of the container */
         }
+		.square-box:hover {
+			box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.2);
+			cursor: pointer;
+		}
+
+		.box-link {
+			text-decoration: none;
+			color: inherit;
+			display: block;
+		}
 		.square-2 {
 			display: flex;
 			justify-content: center;
@@ -79,15 +89,17 @@
     <main>
         <h2>Main Content</h2>
         <p>This is where the main content of your website will go.</p>
-        <div class="square-box">
-            <p class= "square-2">Title of Blog</p>
-	    <p>This will be where the first few lines of the blog post will be</p>
-	    <p>date,time, etc of post</p>
-        </div>
-	<div class="square-box">
-            <p class= "square-2">Title of Blog</p>
-	    <p>This will be where the first few lines of the blog post will be</p>
-	    <p>date,time, etc of post</p>
+		<a href="read.html" class="box-link">
+			<div class="square-box">
+				<p class= "square-2">Title of Blog</p>
+				<p>This will be where the first few lines of the blog post will be</p>
+				<p>date,time, etc of post</p>
+			</div>
+		</a>
+		<div class="square-box">
+			<p class= "square-2">Title of Blog</p>
+			<p>This will be where the first few lines of the blog post will be</p>
+			<p>date,time, etc of post</p>
         </div>
     </main>
     <footer>
